Fix absolute positioning of sample inputs on Safari

--- a/specimen/src/assets/css/components/_sample.sass
+++ b/specimen/src/assets/css/components/_sample.sass
@@ -16,7 +16,7 @@ samp
 
     input
       position: absolute
-      left: 0
+      inset: 0
 
   input
     width: 100%
